--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -129,21 +129,18 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://yuhaoliu7456.github.io/" target="_blank">Yuhao Liu</a><sup>1</sup>,&nbsp;</span>
+                <a href="https://lyf1212.github.io/" target="_blank">Yifan Li</a><sup>1</sup>,&nbsp;</span>
                 <span class="author-block">
-                  <a href="https://zhke.io/" target="_blank">Zhanghan Ke</a><sup>1,十</sup>,&nbsp;</span>
-                  <span class="author-block">
-                    <a href="https://scholar.google.com/citations?user=cBFup5QAAAAJ&hl=en">Fang Liu</a><sup>1,十</sup>,&nbsp;</span>
+                  <a target="_blank">Yuhang Bai</a><sup>1</sup>,&nbsp;</span>
+		<span class="author-block">
+                  <a href="https://williamyang1991.github.io/" target="_blank">Shuai Yang</a><sup>1</sup>,&nbsp;</span>
                 <span class="author-block">
-                  <a href="http://nxzhao.com/" target="_blank">Nanxuan Zhao</a><sup>2</sup>,&nbsp;</span>
-                <span class="author-block">
-                  <a href="https://www.cs.cityu.edu.hk/~rynson/" target="_blank">Rynson W.H. Lau</a><sup>1,十</sup>
+                  <a href="http://39.96.165.147/people/liujiaying.html" target="_blank">Jiaying Liu</a><sup>1,*</sup>
               </div>
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      <sup>1</sup>City University of Hong Kong&nbsp;&nbsp;&nbsp;&nbsp;
-                      <sup>2</sup>Adobe Research
+                      <sup>1</sup>Wangxuan Institute of Computer Technology, Peking University&nbsp;&nbsp;&nbsp;&nbsp;
                     </span>
                   </div>
 
@@ -151,7 +148,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/abs/2403.00644" target="_blank"
+                        <a href="https://github.com/lyf1212/COCO-LC/" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -163,7 +160,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/yuhaoliu7456/Diff-Plugin/" target="_blank"
+                    <a href="https://github.com/lyf1212/COCO-LC/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -174,7 +171,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/yuhaoliu7456/Diff-Plugin/?tab=readme-ov-file#gradio-demo" target="_blank"
+                    <a href="https://github.com/lyf1212/COCO-LC/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
