--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -256,7 +256,7 @@
 </section>
 
 
-<section class="section" id="Visualization">
+<!-- <section class="section" id="Visualization">
   <div class="container is-max-desktop content">
     <h2 class="title">Video Demo</h2>
     <p style="text-align:justify; text-justify:inter-ideograph;">
@@ -273,7 +273,7 @@
     </center>
   </div>
 </section>
-
+ -->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
@@ -281,7 +281,7 @@
       <h2 class="title">BibTeX</h2>
       Please consider to cite COCO-LC if it helps your research.
 <pre>
-<code>@inproceedings{liu2024diff,
+<code>@inproceedings{li2024coco,
   title={COCO-LC: Colorfulness Controllable Language-based Colorization},
   author={Li, Yifan and Bai, Yuhang and Yang, Shuai and Liu, Jiaying},
   booktitle={ACM MM},
