--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -272,8 +272,7 @@
 	    </video>
     </center>
   </div>
-</section>
- -->
+</section>-->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
