--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -129,13 +129,13 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://lyf1212.github.io/" target="_blank">Yifan Li</a><sup>1</sup>,&nbsp;</span>
+                <a href="https://lyf1212.github.io/" target="_blank">Yifan Li</a><sup></sup>,&nbsp;</span>
                 <span class="author-block">
-                  <a target="_blank">Yuhang Bai</a><sup>1</sup>,&nbsp;</span>
+                  <a target="_blank">Yuhang Bai</a><sup></sup>,&nbsp;</span>
 		<span class="author-block">
-                  <a href="https://williamyang1991.github.io/" target="_blank">Shuai Yang</a><sup>1</sup>,&nbsp;</span>
+                  <a href="https://williamyang1991.github.io/" target="_blank">Shuai Yang</a><sup></sup>,&nbsp;</span>
                 <span class="author-block">
-                  <a href="http://39.96.165.147/people/liujiaying.html" target="_blank">Jiaying Liu</a><sup>1,*</sup>
+                  <a href="http://39.96.165.147/people/liujiaying.html" target="_blank">Jiaying Liu</a><sup>*</sup>
               </div>
 
                   <div class="is-size-5 publication-authors">
@@ -207,7 +207,7 @@
 
     <center>
       <video width="700px" height="700px" controls="controls" muted="true">
-        <source src="DiffPlugin.mp4" type="video/mp4" />
+        <source src="../supp_figures.mp4" type="video/mp4" />
 	    </video>
     </center>
   </div>
