--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -140,7 +140,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      <sup>1</sup>Wangxuan Institute of Computer Technology, Peking University&nbsp;&nbsp;&nbsp;&nbsp;
+                      <sup></sup>Wangxuan Institute of Computer Technology, Peking University&nbsp;&nbsp;&nbsp;&nbsp;
                     </span>
                   </div>
 
