--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -236,9 +236,9 @@
 <section class="section" id="Visualization">
     <div class="container is-max-desktop content">
       <h2 class="title">More Visual Results</h2>
-      <center><img src="more.png" border="0" width="100%"></center>
-      <!-- <center><img src="face.png" border="0" width="100%"></center>
-      <center><img src="derain.png" border="0" width="100%"></center> -->
+      <center><img src="supp1.pdf" border="0" width="100%"></center>
+      <center><img src="supp2.pdf" border="0" width="100%"></center>
+      <center><img src="supp3.pdf" border="0" width="100%"></center> -->
      <!-- <center>
         <img src="../projects/assets/0442a954.webp" alt="0442a954" width="224" height="126">&nbsp;
         <img src="../projects/assets/d321dde4.webp" alt="d321dde4" width="224" height="126">&nbsp;
@@ -256,23 +256,6 @@
 </section>
 
 
-<!-- <section class="section" id="Visualization">
-  <div class="container is-max-desktop content">
-    <h2 class="title">Video Demo</h2>
-    <p style="text-align:justify; text-justify:inter-ideograph;">
-      <a href="https://youtu.be/VMQYt5rToZU" target="_blank"><b>YouTube link.</b></a> </p>
-    
-    <!-- <center>
-      <iframe width="560" height="315" src="https://youtu.be/VMQYt5rToZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </center>  -->
-
-    <center>
-      <video width="700px" height="700px" controls="controls" muted="true">
-        <source src="demo.mp4" type="video/mp4" />
-	    </video>
-    </center>
-  </div>
-</section>-->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
