--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -196,9 +196,8 @@
     </div>
   </div>
 </div></section>
-<!-- End teaser video -->
 
-<!-- <!-- Teaser video-->
+<!-- Teaser video-->
 <section class="section" id="Visualization">
   <div class="container is-max-desktop content">
     <!-- <h2 class="title">Video Demo</h2> -->
@@ -211,7 +210,7 @@
 	    </video>
     </center>
   </div>
-</section> -->
+</section>
 
 
 
@@ -238,7 +237,7 @@
       <h2 class="title">More Visual Results</h2>
       <center><img src="supp1.pdf" border="0" width="100%"></center>
       <center><img src="supp2.pdf" border="0" width="100%"></center>
-      <center><img src="supp3.pdf" border="0" width="100%"></center> -->
+      <center><img src="supp3.pdf" border="0" width="100%"></center>
      <!-- <center>
         <img src="../projects/assets/0442a954.webp" alt="0442a954" width="224" height="126">&nbsp;
         <img src="../projects/assets/d321dde4.webp" alt="d321dde4" width="224" height="126">&nbsp;
