--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -235,9 +235,10 @@
 <section class="section" id="Visualization">
     <div class="container is-max-desktop content">
       <h2 class="title">More Visual Results</h2>
-      <center><object src="supp1.pdf" border="0" width="100%"></center>
-      <center><object src="supp2.pdf" border="0" width="100%"></center>
-      <center><object src="supp3.pdf" border="0" width="100%"></center>
+      <center><object data="supp1.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
+      <center><object data="supp2.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
+      <center><object data="supp3.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
+     <!--<center><object src="supp3.pdf" border="0" width="100%"></center> -->
      <!-- <center>
         <img src="../projects/assets/0442a954.webp" alt="0442a954" width="224" height="126">&nbsp;
         <img src="../projects/assets/d321dde4.webp" alt="d321dde4" width="224" height="126">&nbsp;
