--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -235,6 +235,8 @@
 <section class="section" id="Visualization">
     <div class="container is-max-desktop content">
       <h2 class="title">More Visual Results</h2>
+      <p style="text-align:justify; text-justify:inter-ideograph;">
+	You can zoom in for better visualization!
       <center><object data="supp1.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
       <center><object data="supp2.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
       <center><object data="supp3.pdf" type="application/pdf" width="1200px" height="1170px"></object></center>
