--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -237,9 +237,9 @@
       <h2 class="title">More Visual Results</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
 	You can zoom in for better visualization!
-      <center><object data="supp1.pdf" type="application/pdf" width="800px" height="1170px"></object></center>
-      <center><object data="supp2.pdf" type="application/pdf" width="800px" height="1170px"></object></center>
-      <center><object data="supp3.pdf" type="application/pdf" width="800px" height="1170px"></object></center>
+      <center><object data="supp1.pdf" type="application/pdf" width="1100px" height="1170px"></object></center>
+      <center><object data="supp2.pdf" type="application/pdf" width="1100px" height="1170px"></object></center>
+<!--       <center><object data="supp3.pdf" type="application/pdf" width="800px" height="1170px"></object></center> -->
      <!--<center><object src="supp3.pdf" border="0" width="100%"></center> -->
      <!-- <center>
         <img src="../projects/assets/0442a954.webp" alt="0442a954" width="224" height="126">&nbsp;
