--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -237,8 +237,10 @@
       <h2 class="title">More Visual Results</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
 	You can zoom in for better visualization!
-      <center><object data="supp1.pdf" type="application/pdf" width="900px" height="1170px"></object></center>
-      <center><object data="supp2.pdf" type="application/pdf" width="900px" height="1170px"></object></center>
+	   <center><img src="supp1.png" border="0" width="100%"></center>
+	   <center><img src="supp2.png" border="0" width="100%"></center>
+<!--       <center><object data="supp1.pdf" type="application/pdf" width="900px" height="1170px"></object></center> -->
+<!--       <center><object data="supp2.pdf" type="application/pdf" width="900px" height="1170px"></object></center> -->
 <!--       <center><object data="supp3.pdf" type="application/pdf" width="800px" height="1170px"></object></center> -->
      <!--<center><object src="supp3.pdf" border="0" width="100%"></center> -->
      <!-- <center>
