--- a/COCO-LC/index.html
+++ b/COCO-LC/index.html
@@ -283,10 +283,10 @@
 <section class="section" id="Reference">
     <div class="container is-max-desktop content">
       <h2 class="title">Reference</h2>
-      [1] Zhitong Huang, Nanxuan Zhao, and Jing Liao, "Unicolor: A unified framework for multi-modal colorization with transformer", ACM Transactions on Graphics (TOG), 2022.
-      [2] Shuchen Weng, Hao Wu, Zheng Chang, Jiajun Tang, Si Li, and Boxin Shi, "L-CoDe: Language-based colorization using color-object decoupled conditions", AAAI Conference of Artificial Intelligence (AAAI), 2022.
-      [3] Zheng Chang, Shuchen Weng, Yu Li, Si Li, and Boxin Shi, "L-CoDer: Language-based Colorization with Color-object Decoupling Transformer". European Conference on Computer Vision (ECCV), 2022.
-      [4] Zheng Chang, Shuchen Weng, Peixuan Zhang, Yu Li, Si Li, and Boxin Shi, "L-CoIns: Language-based Colorization with Instance Awareness. IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023.
+      [1] Zhitong Huang, Nanxuan Zhao, and Jing Liao, "Unicolor: A unified framework for multi-modal colorization with transformer", ACM Transactions on Graphics (TOG), 2022. <br>
+      [2] Shuchen Weng, Hao Wu, Zheng Chang, Jiajun Tang, Si Li, and Boxin Shi, "L-CoDe: Language-based colorization using color-object decoupled conditions", AAAI Conference of Artificial Intelligence (AAAI), 2022. <br>
+      [3] Zheng Chang, Shuchen Weng, Yu Li, Si Li, and Boxin Shi, "L-CoDer: Language-based Colorization with Color-object Decoupling Transformer". European Conference on Computer Vision (ECCV), 2022. <br>
+      [4] Zheng Chang, Shuchen Weng, Peixuan Zhang, Yu Li, Si Li, and Boxin Shi, "L-CoIns: Language-based Colorization with Instance Awareness. IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <br>
       [5] Zheng Chang, Shuchen Weng, Peixuan Zhang, Yu Li, Si Li, and Boxin Shi, "L-CAD: Language-based Colorization with Any-level Descriptions using Diffusion Priors", Advances in Neural Information Processing Systems (NeurIPS), 2023.
     </div>
 </section>
