--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -130,8 +130,6 @@
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://lyf1212.github.io/" target="_blank">Yifan Li</a><sup></sup>,&nbsp;</span>
-                <span class="author-block">
-                  <a target="_blank">Yuhang Bai</a><sup></sup>,&nbsp;</span>
 		<span class="author-block">
                   <a href="https://williamyang1991.github.io/" target="_blank">Shuai Yang</a><sup></sup>,&nbsp;</span>
                 <span class="author-block">
@@ -148,7 +146,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://github.com/lyf1212/COCO-LC/" target="_blank"
+                        <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -190,7 +188,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <center><img src="teaser.png" border="0" width="100%"></center>
+      <center><img src="taxnomy.png" border="0" width="100%"></center>
       <!-- <h2 class="subtitle has-text-centered"> -->
         <div align="center"><p style="text-align:justify; text-justify:inter-ideograph;width:100%">Figure 1.  We propose <b>COCO-LC</b>, a novel colorfulness controllable language-based colorization framework. (a) COCO-LC generates realistic and semantic-consistent colorization results. (b) COCO-LC allows for flexible user control over (top) color types and (bottom) color styles.</p></div><br> 
     </div>
@@ -198,7 +196,7 @@
 </div></section>
 
 <!-- Teaser video-->
-<section class="section" id="Visualization">
+<!-- <section class="section" id="Visualization">
   <div class="container is-max-desktop content">
     <!-- <h2 class="title">Video Demo</h2> -->
     <!-- <p style="text-align:justify; text-justify:inter-ideograph;">
@@ -210,7 +208,7 @@
 	    </video>
     </center>
   </div>
-</section>
+</section> -->
 
 
 
@@ -222,7 +220,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p style="text-align:justify; text-justify:inter-ideograph;">
-                Image colorization aims to bring colors back to grayscale images. Automatic image colorization methods, which requires no additional guidance, struggle to generate high-quality images due to color ambiguity, and provides limited user controllability. Thanks to the emergency of cross-modality datasets and models, language-based colorization methods are proposed to fully utilize the efficiency and flexibly of text descriptions to guide colorization. In view of the lack of a comprehensive review of language-based colorization literature, we conduct a thorough analysis and benchmarking. We first briefly summarize existing automatic colorization methods. Then, we focus on language-based methods and point out their core challenge on cross-modal alignment. We further divide these methods into two catagories: one attempts to train a cross-modality network from scratch, while the other utilizes the pre-trained cross-modality model to establish the textual-visual correspondence. Based on the analyzed limitations of existing language-based methods, we propose a simple yet effective method based on distilled diffusion model. Extensive experiments show that our simple baseline can produces better results than previous complex methods with 14 times speed up. To the best of our knowledge, this is the first comprehensive review and benchmark on language-based image colorization field, providing meaningful insights for the community.	  </p>
+                Image colorization aims to bring colors back to grayscale images. Automatic image colorization methods, which requires no additional guidance, struggle to generate high-quality images due to color ambiguity, and provides limited user controllability. Thanks to the emergency of cross-modality datasets and models, <b>language-based colorization methods</b> are proposed to fully utilize the efficiency and flexibly of text descriptions to guide colorization. In view of the lack of a comprehensive review of language-based colorization literature, we conduct a thorough analysis and benchmarking. We first briefly summarize existing automatic colorization methods. Then, we focus on language-based methods and point out their core challenge on cross-modal alignment. We further divide these methods into two catagories: one attempts to train a cross-modality network from scratch, while the other utilizes the pre-trained cross-modality model to establish the textual-visual correspondence. Based on the analyzed limitations of existing language-based methods, <b>we propose a simple yet effective method</b> based on distilled diffusion model. Extensive experiments show that our simple baseline can produces better results than previous complex methods with 14 times speed up. To the best of our knowledge, this is <b>the first</b> comprehensive review and benchmark on language-based image colorization field, providing meaningful insights for the community.	  </p>
         </div>
       </div>
     </div>
