--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -190,7 +190,7 @@
     <div class="hero-body">
       <center><img src="taxnomy.png" border="0" width="100%"></center>
       <!-- <h2 class="subtitle has-text-centered"> -->
-        <div align="center"><p style="text-align:justify; text-justify:inter-ideograph;width:100%">Figure 1.  We propose <b>COCO-LC</b>, a novel colorfulness controllable language-based colorization framework. (a) COCO-LC generates realistic and semantic-consistent colorization results. (b) COCO-LC allows for flexible user control over (top) color types and (bottom) color styles.</p></div><br> 
+        <div align="center"><p style="text-align:justify; text-justify:inter-ideograph;width:100%">Figure 1. Taxonomy of automatic and language-based image colorization methods.</p></div><br> 
     </div>
   </div>
 </div></section>
@@ -233,30 +233,20 @@
     <div class="container is-max-desktop content">
       <h2 class="title">More Visual Results</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
-	You can zoom in for better visualization!
-	   <center><img src="supp1.png" border="0" width="100%"></center>
-	   <center><img src="supp2.png" border="0" width="100%"></center>
-	   <center><img src="supp3.png" border="0" width="100%"></center>
-<!--       <center><object data="supp1.pdf" type="application/pdf" width="900px" height="1170px"></object></center> -->
-<!--       <center><object data="supp2.pdf" type="application/pdf" width="900px" height="1170px"></object></center> -->
-<!--       <center><object data="supp3.pdf" type="application/pdf" width="800px" height="1170px"></object></center> -->
-     <!--<center><object src="supp3.pdf" border="0" width="100%"></center> -->
-     <!-- <center>
-        <img src="../projects/assets/0442a954.webp" alt="0442a954" width="224" height="126">&nbsp;
-        <img src="../projects/assets/d321dde4.webp" alt="d321dde4" width="224" height="126">&nbsp;
-        <img src="../projects/assets/02221fb0.webp" alt="02221fb0" width="224" height="126">&nbsp;
-        <img src="../projects/assets/bbe97d18.webp" alt="bbe97d18" width="224" height="126">&nbsp;
-        
-
-        <img src="../projects/assets/002b4dce.webp" alt="002b4dce" width="224" height="126">&nbsp;
-        <img src="../projects/assets/26ed56e6.webp" alt="26ed56e6" width="224" height="126">&nbsp;
-        <img src="../projects/assets/c791ddbb.webp" alt="c791ddbb" width="224" height="126">&nbsp;      
-        <img src="../projects/assets/e5e9eb29.webp" alt="e5e9eb29" width="224" height="126">&nbsp;
-
-      </center> -->
+	Some results of existing language-based methods and our Color-Turbo. You can zoom in for better visualization!
+	   <center><img src="vis.png" border="0" width="100%"></center>
     </div>
 </section>
 
+<section class="section" id="Benchmark Results">
+    <div class="container is-max-desktop content">
+      <h2 class="title">More Visual Results</h2>
+      <p style="text-align:justify; text-justify:inter-ideograph;">
+	Some results of existing language-based methods and our Color-Turbo. You can zoom in for better visualization!
+	   <center><img src="uncond_res.png" border="0" width="100%"></center>
+	   <center><img src="cond_res.png" border="0" width="100%"></center>
+    </div>
+</section>
 
 
 <!--BibTex citation -->
@@ -265,7 +255,7 @@
       <h2 class="title">BibTeX</h2>
       Please consider to cite <b>LIC-Benchmark</b> and <b>Color-Turbo</b> if it helps your research.
 <pre>
-<code>@article{li2024coco,
+<code>@article{li2024licbench,
   title={Language-based Image Colorization: A Benchmark and Beyond},
   author={Li, Yifan and Yang, Shuai and Liu, Jiaying},
   booktitle={arXiv},
