--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -195,22 +195,6 @@
   </div>
 </div></section>
 
-<!-- Teaser video-->
-<!-- <section class="section" id="Visualization">
-  <div class="container is-max-desktop content">
-    <!-- <h2 class="title">Video Demo</h2> -->
-    <!-- <p style="text-align:justify; text-justify:inter-ideograph;">
-      <a href="https://www.youtube.com/watch?v=ZjemS6SdNts" target="_blank"><b>YouTube link.</b></a> </p> -->
-
-    <center>
-      <video width="700px" height="700px" controls="controls" muted="true">
-        <source src="../supp_figures.mp4" type="video/mp4" />
-	    </video>
-    </center>
-  </div>
-</section> -->
-
-
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -228,10 +212,36 @@
 </section>
 <!-- End paper abstract -->
 
-    
+<section class="section" id="Summary">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Summary of main features</h2>
+      <p style="text-align:justify; text-justify:inter-ideograph;">
+	We summarize main feautures of language-based methods in a brief sentence.
+	   <center><img src="summary_table.png" border="0" width="100%"></center>
+    </div>
+</section>
+	
+<section class="section" id="Analysis">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Diffusion-based methods analysis</h2>
+      <p style="text-align:justify; text-justify:inter-ideograph;">
+	We summarize four representative condition insertion paradigms of existing Diffusion-based methods. These four methods can constraint the generation process by grayscale images with different injection intensities and feature granularity.
+	   <center><img src="cond_four.png" border="0" width="100%"></center>
+    </div>
+</section>
+
+<section class="section" id="Color-Turbo">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Model architecture of our <b>Color-Turbo</b>. Although the pipeline is simple, it is effctive to generate high-quality results with fast inference speed!</h2>
+      <p style="text-align:justify; text-justify:inter-ideograph;">
+	We summarize four representative condition insertion paradigms of existing Diffusion-based methods. These four methods can constraint the generation process by grayscale images with different injection intensities and feature granularity.
+	   <center><img src="color-turbo.png" border="0" width="100%"></center>
+    </div>
+</section>
+	
 <section class="section" id="Visualization">
     <div class="container is-max-desktop content">
-      <h2 class="title">More Visual Results</h2>
+      <h2 class="title">Visual Results</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
 	Some results of existing language-based methods and our Color-Turbo. You can zoom in for better visualization!
 	   <center><img src="vis.png" border="0" width="100%"></center>
@@ -240,7 +250,7 @@
 
 <section class="section" id="Benchmark Results">
     <div class="container is-max-desktop content">
-      <h2 class="title">More Visual Results</h2>
+      <h2 class="title">Quantitative Benchmark Results</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
 	Some results of existing language-based methods and our Color-Turbo. You can zoom in for better visualization!
 	   <center><img src="uncond_res.png" border="0" width="100%"></center>
