--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -232,10 +232,10 @@
 
 <section class="section" id="Color-Turbo">
     <div class="container is-max-desktop content">
-      <h2 class="title">Model architecture of our <b>Color-Turbo</b>. Although the pipeline is simple, it is effctive to generate high-quality results with fast inference speed!</h2>
+      <h2 class="title">Model architecture of our <b>Color-Turbo</b>.</h2>
       <p style="text-align:justify; text-justify:inter-ideograph;">
-	We summarize four representative condition insertion paradigms of existing Diffusion-based methods. These four methods can constraint the generation process by grayscale images with different injection intensities and feature granularity.
-	   <center><img src="color-turbo.png" border="0" width="100%"></center>
+	Although the pipeline is simple, it is effctive to generate high-quality results with fast inference speed!	   
+	    <center><img src="color-turbo.png" border="0" width="100%"></center>
     </div>
 </section>
 	
