--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -146,7 +146,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
+                        <a href="https://arxiv.org/abs/2503.14974" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -166,8 +166,19 @@
                     <span>Code</span>
                   </a>
                 </span>
+			    
+		  <!-- HF Demo link -->
+		  <span class="link-block">
+		    <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
+		    class="external-link button is-normal is-rounded is-dark">
+		    <span class="icon">
+		      <img src="https://huggingface.co/front/assets/huggingface_logo.svg" alt="Hugging Face" width="16" height="16">
+		    </span>
+		    <span>Demo</span>
+		  </a>
+		</span>
 
-                  <!-- Github link -->
+<!--                   <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -176,7 +187,7 @@
                     </span>
                     <span>Demo</span>
                   </a>
-                </span>
+                </span> -->
             </div>
           </div>
         </div>
@@ -265,11 +276,11 @@
       <h2 class="title">BibTeX</h2>
       Please consider to cite <b>LIC-Benchmark</b> and <b>Color-Turbo</b> if it helps your research.
 <pre>
-<code>@article{li2024licbench,
+<code>@article{li2025colorturbo,
   title={Language-based Image Colorization: A Benchmark and Beyond},
   author={Li, Yifan and Yang, Shuai and Liu, Jiaying},
-  booktitle={arXiv},
-  year={2024}
+  booktitle={arXiv: 2503.14974},
+  year={2025}
 }</code>
 </pre>
     </div>
