--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -167,7 +167,7 @@
                   </a>
                 </span>
 			    
-		  <!-- HF Demo link -->
+<!-- 		  <!-- HF Demo link -->
 		  <span class="link-block">
 		    <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
 		    class="external-link button is-normal is-rounded is-dark">
@@ -176,9 +176,9 @@
 		    </span>
 		    <span>Demo</span>
 		  </a>
-		</span>
+		</span> -->
 
-<!--                   <!-- Github link -->
+                  <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -187,7 +187,7 @@
                     </span>
                     <span>Demo</span>
                   </a>
-                </span> -->
+                </span>
             </div>
           </div>
         </div>
