--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -178,8 +178,8 @@
 		  </a>
 		</span>
 
-<!--                   <!-- Github link -->
-                  <span class="link-block">
+                   <!-- Github link -->
+<!--                   <span class="link-block">
                     <a href="https://github.com/lyf1212/Color-Turbo/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -187,7 +187,7 @@
                     </span>
                     <span>Demo</span>
                   </a>
-                </span> -->
+                </span> --> -->
             </div>
           </div>
         </div>
