--- a/LIC-benchmark/index.html
+++ b/LIC-benchmark/index.html
@@ -187,7 +187,7 @@
                     </span>
                     <span>Demo</span>
                   </a>
-                </span> --> -->
+                </span> -->
             </div>
           </div>
         </div>
